<!--    Layout XML File for the Initial Open Activity      -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context="com.wavemedia.studentapp.Open">

    <!-- Smart Slides Logo -->
    <ImageView
        android:contentDescription="@string/SScontentDescription"
        android:layout_width="243dp"
        android:layout_height="233dp"
        android:id="@+id/imageView"
        android:clickable="true"
        android:src="@drawable/smartslideswhitetext"
        android:adjustViewBounds="false" />

    <!-- Institution Dropdown Box -->
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/spinner"
        android:layout_gravity="center_horizontal" />

    <!-- Linear Layout for Connection Code Label and and Text Field -->
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Connection Code Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hex_code"
            android:id="@+id/textView"
            android:typeface="normal"
            android:textStyle="bold|normal"
            android:singleLine="true"
            android:gravity="center_horizontal" />

        <!-- Connection Code field text box -->
        <EditText
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:inputType="text"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <!-- Connect Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connectbutton"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:enabled="true"
        android:onClick="connect"/>     <!-- On Click, call connect method -->


</LinearLayout>
